--- a/2.你真的会问问题吗？.md
+++ b/2.你真的会问问题吗？.md
@@ -1,5 +1,6 @@
-1. 问前先问己（先在规定时间内尽自己最大努力独立解决） 
+## 2.你真的会问问题吗？
 
+1. 问前先问己（先在规定时间内尽自己最大努力独立解决） 
 2. 找对人来问（确保他是你所知道的最佳解决人选） 
 3. 把问题说清（目标先行，抓问题核心，简明扼要，场景跟随-问题场景不能省，及自己做了啥） 
 4. 区分问问题形式（口语、书面，区别对待，口语可事先练习好） 
