--- a/7.犯错是成长的契机.md
+++ b/7.犯错是成长的契机.md
@@ -1,3 +1,5 @@
+## 7.犯错是成长的契机
+
 首先要做好情绪管理，很多人犯错后会下意识的否认，“我没错啊”、“这不可能啊”；或者试图掩盖，“千万不能让别人知道，尤其是领导”；或者试图推脱，“都是某某的错”、“都是某某没有做好”；或者陷入深深的自责，“我太差劲了，居然犯这种错误”。
 
 
