--- a/3.做到专注就赢了一大半人.md
+++ b/3.做到专注就赢了一大半人.md
@@ -1,3 +1,5 @@
+## 3.做到专注就赢了一大半人
+
 首先是提前排除掉可能的干扰源。永远不要高估自己的抗干扰能力，想集中时间和精力做一件事，就要提前把有可能打扰你的东西剔除掉，比如手机和电脑的通知信息、零食、娱乐书籍、电视等等，要么关掉，要么放远远的。
 
 我在写作的时候，一般会关掉 Apple Watch 和 Mac 的通知，手机则从来都是静音状态，花 1 到 2 时完成一篇或几篇文章的写作，然后再回到碎片状态。编程、设计产品、阅读的时候也是如此，排除干扰，投入数个小时的时间并输出成果，然后再集中处理那些碎片信息。若非如此，我断然不可能在业余时间坚持写作这么多年并产出几百万的文字。
