--- a/13.影响了我二十年的三个原则.md
+++ b/13.影响了我二十年的三个原则.md
@@ -2,6 +2,18 @@
 
 一，闭环原则
 
+如果你能够在完成自己工作任务的过程中，及时的把自己的工作成果反馈给你的 Leader 和相关协作人，总能够带来各种惊喜。你的反馈或许提升了团队效率，也可能改变了产品决策，同时你会因为持续的反馈获得更为重要的任务和职责，因为你是一个能够让事情形成闭环的家伙，一个脱离了低级趣味的人，一个靠谱的人。
+
+
+
+**闭环就是让事情有始有终，任务从启动到结束，形成一个完整的链条。**CTO 给你安排了一个技术预研任务，你应该定期反馈的工作包括：技术选型、遇到的困难、解决的办法、最终的预研结果等等。任务的最后，你应该提交一份技术预研报告，并针对这样一个结果发起一次评审。
+
+可惜的是，很多技术人员只对技术有热情，对反馈毫无概念。接到任务之后默默预研，完成之后默默等待下一个任务的降临，只要没人问，就一直牙关紧咬，目光坚毅，打死也不说。如果分配任务的人疏忽了，这个任务可能无疾而终了。
+
 二，谁难受谁推进原则
 
 三，Think bigger
+
+现在我在做一件事情的时候，往往会下意识的从更大的范围来考虑它。Think bigger！无论是什么，从更大的尺度去考虑，看看它会变成什么样。
+
+你运营了一个公众号，每天一篇原创，写了两个月了，似乎没什么效果。那么拉长时间的维度，如果你坚持写，写了一年，写了十年，会是什么局面？之前有很多读者问我是怎么学习成长的，我给他们介绍了一个万试万灵的秘诀，其实很简单：**定好一个学习目标，无论什么情况，每天花费一个小时在这个领域，半年后看效果。如果不行，十年呢？**
