26. 删除有序数组中的重复项

--- a/leetcode/top-interview-questions-easy/code1_removeDuplicates/删除有序数组中的重复项.md
+++ b/leetcode/top-interview-questions-easy/code1_removeDuplicates/删除有序数组中的重复项.md
@@ -84,3 +84,84 @@ func removeDuplicates(nums []int) int {
 	return left + 1
 }
 ```
+## Java 实现
+
+```java
+public class Solution {
+    public int removeDuplicates(int[] nums) {
+        // 检查数组是否为空。如果数组长度为 0，返回 0。
+        if (nums.length == 0) {
+            return 0;
+        }
+
+        // 初始化 left 指针为 0。
+        int left = 0;
+        // 使用 right 指针从数组的第二个元素开始遍历。
+        for (int right = 1; right < nums.length; right++) {
+            // 检查 left 指针指向的元素与 right 指针指向的元素是否不同。
+            if (nums[left] != nums[right]) {
+                left++;
+                // 将 right 指向的唯一元素赋值给 nums[left]。
+                nums[left] = nums[right];
+            }
+        }
+        // 返回去重后数组的长度。
+        return left + 1;
+    }
+}
+```
+
+## PHP 实现
+
+```php
+function removeDuplicates(&$nums) {
+    // 检查数组是否为空。如果数组长度为 0，返回 0，表示去重后没有元素。
+    if (count($nums) == 0) {
+        return 0;
+    }
+
+    // 初始化 left 指针为 0。
+    $left = 0;
+    // 使用 right 指针从数组的第二个元素开始遍历。
+    for ($right = 1; $right < count($nums); $right++) {
+        // 检查 left 指针指向的元素与 right 指针指向的元素是否不同。
+        if ($nums[$left] != $nums[$right]) {
+            $left++;
+            // 将 right 指向的唯一元素赋值给 nums[left]。
+            $nums[$left] = $nums[$right];
+        }
+    }
+    // 返回去重后数组的长度。
+    return $left + 1;
+}
+```
+
+## C++ 实现
+
+```cpp
+class Solution {
+public:
+    int removeDuplicates(vector<int>& nums) {
+        // 检查数组是否为空。如果数组长度为 0，返回 0。
+        if (nums.empty()) {
+            return 0;
+        }
+
+        // 初始化 left 指针为 0。
+        int left = 0;
+        // 使用 right 指针从数组的第二个元素开始遍历。
+        for (int right = 1; right < nums.size(); right++) {
+            // 检查 left 指针指向的元素与 right 指针指向的元素是否不同。
+            if (nums[left] != nums[right]) {
+                left++;
+                // 将 right 指向的唯一元素赋值给 nums[left]。
+                nums[left] = nums[right];
+            }
+        }
+        // 返回去重后数组的长度。
+        return left + 1;
+    }
+};
+```
+
+x
