--- a/leetcode/top-interview-questions-easy/code1_removeDuplicates/删除有序数组中的重复项.md
+++ b/leetcode/top-interview-questions-easy/code1_removeDuplicates/删除有序数组中的重复项.md
@@ -1,4 +1,4 @@
-# 26. 删除有序数组中的重复项
+# 【leetcode初级算法】26. 删除有序数组中的重复项
 题目描述：
 给你一个 非严格递增排列 的数组 nums ，请你 原地 删除重复出现的元素，使每个元素 只出现一次 ，返回删除后数组的新长度。元素的 相对顺序 应该保持 一致 。然后返回 nums 中唯一元素的个数。
 
@@ -163,5 +163,3 @@ public:
     }
 };
 ```
-
-x
